--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -15,6 +15,7 @@
     "Đang Vận Động":"Is Campaigning",
     "Không Giới Hạn":"Indefinite",
     "Dự Án Quan Trọng":"Important projects",
+    "Trở Thành Tình Nguyện Viên":"Become a Volunteer",
     "Khoảng":"About",
     "Kết Quả Tìm Kiếm Cho":"search results for",
     "Kết Quả Tìm Kiếm":"Search Results",
@@ -26,5 +27,16 @@
     "Gọi mọi lúc":"Call Anytime",
     "Các Dự Án":"The projects",
     "Tất Cả Dự Án":"All Projects",
+    "SĐT":"Phone",
+    "Ngày Sinh": "Birthday",
+    "Họ và Tên":"Full Name",
+    "Tên Của Bạn": "Your Name",
+    "Email Của Bạn": "Your Email",
+    "Địa Chỉ Email": "Email Address",
+    "Mật Khẩu": "Password",
+    "Nhập Lại Mật Khẩu": "Confirm Password",
+    "Đăng Ký": "Subscribe",
+    "Đăng Ký Tài Khoản": "Register",
+    "Đăng Nhập": "Login",
     "Giúp đỡ lẫn nhau có thể làm cho thế giới tốt đẹp hơn":"Helping each other can make world better"
 }
