--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -11,6 +11,9 @@
     "Đóng Góp":"Donate",
     "Huy Động":"Mobilization",
     "Góp Được":"Donation",
+    "Thông Số":"Parameter",
+    "Thống Kê":"Statistical",
+    "Danh Sách Người Đã Đóng Góp Hôm Nay":"Today's Contributor List",
     "Đã Hoàn Thành":"Completed",
     "Đang Vận Động":"Is Campaigning",
     "Không Giới Hạn":"Indefinite",
@@ -33,7 +36,33 @@
     "Tên Của Bạn": "Your Name",
     "Email Của Bạn": "Your Email",
     "Địa Chỉ Email": "Email Address",
+    "Tin Nhắn": "Messenger",
+    "Tên Bạn": "Name",
+    "Ngày Khởi Tạo": "Created_at",
+    "Ngày Cập Nhật": "Updated_at",
+    "Đang Nhận Đóng Góp": "Get Donations",
+    "Đóng Góp Thành Công": "Successful Contribution",
+    "Số Người Đã Đóng Góp": "Contribute Number of People",
+    "Số tiền được đóng góp": "Amount contributed",
+    "Hoạt động": "Actions",
+    "Vai Trò": "Role",
+    "Hiệu Lực": "Active",
+    "Hình Ảnh": "Thumbnail",
+    "Tiêu Đề": "Title",
+    "Người Đóng Góp": "Contribute",
+    "Ngày Đóng Góp": "Donation Day",
+    "Loại": "Category",
+    "Thông Tin Chi Tiết": "Details",
+    "Sự Chấp Thuận": "Approval",
+    "Không Tán Thành": "Disapprove",
+    "Quan Trọng": "Important",
+    "Nhận": "Received",
+    "Thư Gửi": "Send Mail",
     "Mật Khẩu": "Password",
+    "Số Tiền Đóng Góp": "Contribution",
+    "Miêu Tả": "Description",
+    "Nội Dung": "Content",
+    "Xác Nhận": "Content",
     "Nhập Lại Mật Khẩu": "Confirm Password",
     "Đăng Ký": "Subscribe",
     "Đăng Ký Tài Khoản": "Register",
