--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -49,12 +49,12 @@
     "Hiệu Lực": "Active",
     "Hình Ảnh": "Thumbnail",
     "Tiêu Đề": "Title",
-    "Người Đóng Góp": "Contribute",
+    "Người Đóng Góp": "Contributor",
     "Ngày Đóng Góp": "Donation Day",
-    "Loại": "Category",
+    "Thể Loại": "Category",
     "Thông Tin Chi Tiết": "Details",
-    "Sự Chấp Thuận": "Approval",
-    "Không Tán Thành": "Disapprove",
+    "Chấp Thuận": "Approval",
+    "Không Chấp Thuận": "Disapprove",
     "Quan Trọng": "Important",
     "Nhận": "Received",
     "Thư Gửi": "Send Mail",
@@ -62,7 +62,7 @@
     "Số Tiền Đóng Góp": "Contribution",
     "Miêu Tả": "Description",
     "Nội Dung": "Content",
-    "Xác Nhận": "Content",
+    "Xác Nhận": "Confirm",
     "Nhập Lại Mật Khẩu": "Confirm Password",
     "Đăng Ký": "Subscribe",
     "Đăng Ký Tài Khoản": "Register",
