--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -67,5 +67,6 @@
     "Đăng Ký": "Subscribe",
     "Đăng Ký Tài Khoản": "Register",
     "Đăng Nhập": "Login",
+    "Nhà tài trợ": "Sponsor",
     "Giúp đỡ lẫn nhau có thể làm cho thế giới tốt đẹp hơn":"Helping each other can make world better"
 }
