--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -67,5 +67,10 @@
     "Đăng Ký": "Subscribe",
     "Đăng Ký Tài Khoản": "Register",
     "Đăng Nhập": "Login",
-    "Giúp đỡ lẫn nhau có thể làm cho thế giới tốt đẹp hơn":"Helping each other can make world better"
+    "Giúp đỡ lẫn nhau có thể làm cho thế giới tốt đẹp hơn":"Helping each other can make world better",
+    "Quên Mật Khẩu?": "forgot password?",
+    "Ghi Nhớ Mật Khẩu":"Remember Me"
+
+
+
 }
