--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -68,7 +68,7 @@
     "Đăng Ký Tài Khoản": "Register",
     "Đăng Nhập": "Login",
     "Nhà tài trợ": "Sponsor",
-    "Giúp đỡ lẫn nhau có thể làm cho thế giới tốt đẹp hơn":"Helping each other can make world better"
+    "Giúp đỡ lẫn nhau có thể làm cho thế giới tốt đẹp hơn":"Helping each other can make world better",
     "Quên Mật Khẩu?": "forgot password?",
     "Ghi Nhớ Mật Khẩu":"Remember Me"
 
