--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -70,7 +70,8 @@
     "Nhà tài trợ": "Sponsor",
     "Giúp đỡ lẫn nhau có thể làm cho thế giới tốt đẹp hơn":"Helping each other can make world better",
     "Quên Mật Khẩu?": "forgot password?",
-    "Ghi Nhớ Mật Khẩu":"Remember Me"
+    "Ghi Nhớ Mật Khẩu":"Remember Me",
+    "Các Khoản Đóng Góp Gần Đây": "Recent Donations"
 
 
 
