--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -6,7 +6,8 @@
     "Liên Hệ":"Contact",
     "Danh Sách Đóng Góp":"Contributors",
     "Thư Viện Ảnh":"Gallery",
-    "Tình Nguyện Viên":"Volunteers",
+    "Tình Nguyện Viên":"Volunteer",
+    "Danh Sách Tình Nguyện Viên":"Volunteers",
     "Đăng Ký Tình Nguyện Viên":"Become A Volunteer",
     "Đóng Góp":"Donate",
     "Huy Động":"Mobilization",
